# tml-coherence-engine

./: .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  SPEC.md  pyproject.toml
src/tml_engine/: __init__.py  cli.py  pipeline.py
src/tml_engine/confirmation/: __init__.py  app.py  mock_data.py  provenance.py
src/tml_engine/confirmation/screens/: __init__.py  archetype.py  capabilities.py  domains.py  edges.py  flows.py  policies.py  skills.py  summary.py  welcome.py
src/tml_engine/confirmation/widgets/: __init__.py  assertion.py  editor.py  progress.py  response.py
src/tml_engine/export/: __init__.py  json.py  yaml.py
src/tml_engine/extractors/: __init__.py  base.py  interview.py  web.py
src/tml_engine/extractors/plugins/: __init__.py
src/tml_engine/graph/: __init__.py  compute.py
src/tml_engine/identity/: base.py  local.py
src/tml_engine/models/: __init__.py  declaration.py  graph.py  identity.py  primitives.py
src/tml_engine/storage/: __init__.py  sqlite.py
src/tml_engine/structurer/: __init__.py  llm.py
templates/web_scrape/: default.yaml
tests/: test_e2e_validation.py
tests/test_confirmation/: test_mock_data.py  test_persistence.py
tests/test_extractors/: test_base.py  test_interview.py  test_web.py
tests/test_graph/: test_compute.py
tests/test_identity/: test_local.py
tests/test_models/: test_declaration.py  test_graph.py  test_primitives.py
tests/test_pipeline/: test_pipeline.py
tests/test_storage/: test_sqlite.py
tests/test_structurer/: test_llm.py
