[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tml-coherence-engine"
version = "0.1.0"
description = "Extract human expertise, structure as TML primitives, confirm via TUI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "Michael", email = "michael@cobrachicken.ai" },
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0",
]

[project.scripts]
tml-engine = "tml_engine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tml_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["tml_engine"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter)
    "TC001",  # don't move first-party imports to TYPE_CHECKING (breaks Pydantic)
    "TC003",  # don't move stdlib imports to TYPE_CHECKING (breaks Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"src/tml_engine/cli.py" = ["B008"]  # typer.Option in defaults is standard Typer pattern

[tool.ruff.lint.isort]
known-first-party = ["tml_engine"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
